Adding initial logo to the landing page

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -4,8 +4,9 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1>RC-Stats</h1>
+    <img class="img-responsive center-block" src="static/img/logo.png"/>
     <p>RC Racing Community.</p>
+
 </div>
 
 {% endblock %}
