--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -36,5 +36,5 @@ RC-Stats is a racing community to track and share your RC race results.
       <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
     </div>
   </div>
-
+</div>
 {% endblock %}
