--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -20,21 +20,25 @@ RC-Stats is a racing community to track and share your RC race results.
 <div class="container">
   <!-- Example row of columns -->
   <div class="row">
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+    <div class="col-md-4 well">
+      <h2>NEW RC-Stats</h2>
+      <p>
+        Mobile friendly, email updates, and more social. In order to support these new goals I have undertaken a rewrite of the site.
+        <br/>
+        New functionality:
+      </p>
+      <ul>
+      <li>Profile creation and login - follow your friends.</li>
+      <li>Email race results directly to your inbox.</li>
+      <li>Automatic race uploads, no more gaps in race coverage.</li>
+      </ul>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-1"></div>
+    <div class="col-md-4 well">
       <h2>Heading</h2>
       <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
       <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
   </div>
 </div>
 {% endblock %}
