--- a/rcstatsV2/templates/rcstats_base.html
+++ b/rcstatsV2/templates/rcstats_base.html
@@ -14,6 +14,7 @@
     <!-- Bootstrap -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/custom.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-table.min.css" rel="stylesheet" >
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -97,5 +98,9 @@
     <script src="/static/js/jquery-1.11.2.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/static/js/bootstrap.min.js"></script>
-  </body>
+    <script src="/static/js/bootstrap-table.min.js"></script>
+    <script src="/static/js/underscore-min.js"></script>
+    {% block script %} {% endblock %}
+
+</body>
 </html>
