--- a/rcstatsV2/templates/rcstats_base.html
+++ b/rcstatsV2/templates/rcstats_base.html
@@ -100,6 +100,7 @@
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/bootstrap-table.min.js"></script>
     <script src="/static/js/underscore-min.js"></script>
+    <script src="/static/js/moment.min.js"></script>
     {% block script %} {% endblock %}
 
 </body>
