--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -18,7 +18,6 @@ RC-Stats is a racing community to track and share your RC race results.
 </div>
 
 <div class="container">
-  <!-- Example row of columns -->
   <div class="row">
     <div class="col-md-5 well">
       <h2>NEW RC-Stats</h2>
@@ -33,21 +32,25 @@ RC-Stats is a racing community to track and share your RC race results.
       <li>Automatic race uploads, no more gaps in race coverage.</li>
       </ul>
     </div>
-    <div class="col-md-1"></div>
+  </div>
+  <div class="row">
     {% if singleracedetail != null %}
-    <div class="col-md-6 well">
-      <h2>Newest Race in the System</h2>
+    <div class="col-md-5 well">
+      <h2>Newest Race</h2>
       <div id="span-new-race-{{ singleracedetail.id }}"></div>
       <table id="table-new-race-{{ singleracedetail.id }}"></table>
-   </div>
-   {% endif %}
+    </div>
+    {% endif %}
 
-   <div class="col-md-5 well">
-     <h2>{{ trackname.trackname }} Past Races</h2>
-     <table id="table-all-races-{{ trackname.id }}"></table>
-   </div>
+    <div class="col-md-1"></div>
+
+    <div class="col-md-5 well">
+      <h2>Recent Races</h2>
+      <h3>{{ trackname.trackname }}</h3>
+      <table id="table-all-races-{{ trackname.id }}"></table>
+    </div>
   </div>
-</div>
+
 
 {% endblock %}
 
