--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -19,12 +19,12 @@ RC-Stats is a racing community to track and share your RC race results.
 
 <div class="container">
   <div class="row">
-    <div class="col-md-5 well">
+    <div class="col-md-12 well">
       <h2>NEW RC-Stats</h2>
       <p>
         Mobile friendly, email updates, and more social. In order to support these new goals I have undertaken a rewrite of the site.
         <br/>
-        New functionality:
+        <b>New functionality:</b>
       </p>
       <ul>
       <li>Profile creation and login - follow your friends.</li>
@@ -35,16 +35,15 @@ RC-Stats is a racing community to track and share your RC race results.
   </div>
   <div class="row">
     {% if singleracedetail != null %}
-    <div class="col-md-5 well">
+    <div class="col-md-6 well">
       <h2>Newest Race</h2>
       <div id="span-new-race-{{ singleracedetail.id }}"></div>
       <table id="table-new-race-{{ singleracedetail.id }}"></table>
     </div>
     {% endif %}
 
-    <div class="col-md-1"></div>
 
-    <div class="col-md-5 well">
+    <div class="col-md-6 well">
       <h2>Recent Races</h2>
       <h3>{{ trackname.trackname }}</h3>
       <table id="table-all-races-{{ trackname.id }}"></table>
