--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -61,55 +61,52 @@ RC-Stats is a racing community to track and share your RC race results.
 
 $(document).ready(function(){
   populateSingleRaceFromRestEndpoint("{% url 'singleracedetailsbytrack-detail' trackname=trackname.id pk=singleracedetail.id  %}", {{ singleracedetail.id }});
-
-  // We want to create a basic list of past races so they can quickly scan through them.
-  $.ajax({
-      // Example - http://127.0.0.1:8000/api/TrackName/1/SingleRaceDetailsSlim/
-      url: "{% url 'singleracedetailslim-list' trackname=trackname.id %}",
-      contentType:"application/json; charset=utf-8",
-      dataType: "json",
-      type: "GET"
-    }).error(function(r){
-      console.log(r);
-    }).success(function(raceData){
-      //console.log("success", raceData);
-
-      // We want to clean up the times.
-      var raceDataFormated = _.map(raceData, function(race) {
-        var racedate = moment(race.racedate);
-        var formatedRace = "";
-        racedate.local();
-        // Reference - http://momentjs.com/docs/#/displaying/
-        formatedDate = racedate.format("MMM/D dddd h:mm");
-        race.racedate = formatedDate;
-        return race;
-      });
-
-      //console.log("Data for the graph:", raceData);
-      $("#table-all-races-" + {{ trackname.id }}).bootstrapTable({
-        data: raceData,
-        pagination: "true",
-        onClickRow: function (row) {
-            console.log('Event: onClickRow, data: ' + JSON.stringify(row));
-            window.location.href = "{% url 'results-singleracedetail' '1111111' %}".replace("1111111", row.id)
-        },
-        columns: [{
-            field: "id",
-            title: "",
-            visible: false
-        }, {
-            field: "racedata",
-            title: "Class"
-        }, {
-            field: "roundnumber",
-            title: "Rnd"
-        }, {
-            field: "racedate",
-            title: "Date"
-        }]
-      });
-    })
 });
+
+//console.log("Data for the graph:", raceData);
+$("#table-all-races-" + {{ trackname.id }}).bootstrapTable({
+  //data: raceData,
+  pagination: "true",
+  url: "{% url 'singleracedetailslim-list' trackname=trackname.id %}",
+  sidePagination: "server",
+  responseHandler: function(rawRaceData) {
+    // TODO - this is gross/hacky - FIX ME
+   raceData = rawRaceData.results;
+
+   var raceDataFormated = _.map(raceData, function(race) {
+     var racedate = moment(race.racedate);
+     var formatedRace = "";
+     racedate.local();
+     // Reference - http://momentjs.com/docs/#/displaying/
+     formatedDate = racedate.format("MMM/D dddd h:mm");
+     race.racedate = formatedDate;
+     return race;
+   });
+
+   rawRaceData.total = rawRaceData.count;
+   rawRaceData.rows = raceDataFormated;
+    return rawRaceData;
+  },
+  onClickRow: function (row) {
+      console.log('Event: onClickRow, data: ' + JSON.stringify(row));
+      window.location.href = "{% url 'results-singleracedetail' '1111111' %}".replace("1111111", row.id)
+  },
+  columns: [{
+      field: "id",
+      title: "",
+      visible: false
+  }, {
+      field: "racedata",
+      title: "Class"
+  }, {
+      field: "roundnumber",
+      title: "Rnd"
+  }, {
+      field: "racedate",
+      title: "Date"
+  }]
+});
+
 </script>
 {% endif %}
 
