Clean up the usrena templates to match the rest of the site, also adjust some of the copy on the landing page

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -22,12 +22,12 @@ RC-Stats is a racing community to track and share your RC race results.
     <div class="col-md-12 well">
       <h2>NEW RC-Stats</h2>
       <p>
-        Mobile friendly, email updates, and more social. In order to support these new goals I have undertaken a rewrite of the site.
+        <b>Mobile friendly and email updates</b>. This is a complete re-write of the original rc-stats site.
         <br/>
-        <b>New functionality:</b>
+        New functionality:
       </p>
       <ul>
-      <li>Profile creation and login - follow your friends.</li>
+      <li>Profile creation and login.</li>
       <li>Email race results directly to your inbox.</li>
       <li>Automatic race uploads, no more gaps in race coverage.</li>
       </ul>
