--- a/rcstatsV2/templates/userena/password_form.html
+++ b/rcstatsV2/templates/userena/password_form.html
@@ -4,16 +4,21 @@
 
 {% block title %}{% trans "Change password" %}{% endblock %}
 
-{% block userena_content_title %}<h2>{% blocktrans with user.username as username %}Account &raquo; {{ username }}{% endblocktrans %}</h2>{% endblock %}
+{% block userena_content_title %}
+<h2>
+  <img class="img-rounded" src="{{ user.my_profile.get_mugshot_url }}" width="40" />
+  {% blocktrans with profile.user.username as username %}Account &raquo; {{ username }}{% endblocktrans %}
+</h2>
+{% endblock %}
 
 {% block userena_content %}
 <form action="" method="post" id="password_change_form">
-  <ul id="box-nav">
-    <li class="first"><a href="{% url 'userena_profile_detail' user.username %}"><span>{% trans 'View profile' %}</span></a></li>
-    <li><a href="{% url 'userena_profile_edit' user.username %}">{% trans "Edit profile" %}</a></li>
-    <li  class="selected"><a href="{% url 'userena_password_change' user.username %}">{% trans "Change password" %}</a></li>
-    <li class="last"><a href="{% url 'userena_email_change' user.username %}">{% trans "Change email" %}</a></li>
-  </ul>
+  <div class="btn-group">
+    <a type="button" class="btn btn-primary" href="{% url 'userena_profile_detail' user.username %}">{% trans "View profile" %}</a>
+    <a type="button" class="btn btn-primary" href="{% url 'userena_profile_edit' user.username %}">{% trans "Edit profile" %}</a>
+    <a type="button" class="btn btn-primary active" href="{% url 'userena_password_change' user.username %}">{% trans "Change password" %}</a>
+    <a type="button" class="btn btn-primary" href="{% url 'userena_email_change' user.username %}">{% trans "Change email" %}</a>
+  </div>
   <fieldset>
     <legend>{% trans "Change Password" %}</legend>
     {% csrf_token %}
