--- a/rcstatsV2/templates/userena/profile_detail.html
+++ b/rcstatsV2/templates/userena/profile_detail.html
@@ -3,56 +3,76 @@
 {% load url from future %}
 
 {% block title %}{% blocktrans with profile.user.username as username %}{{ username }}'s profile.{% endblocktrans %}{% endblock %}
-{% block userena_content_title %}<h2>{{ profile.user.username }} {% if profile.user.get_full_name %}({{ profile.user.get_full_name }}){% endif %}</h2>{% endblock %}
+
+{% block userena_content_title %}
+  <h2>
+    <img class="img-rounded" src="{{ user.my_profile.get_mugshot_url }}" width="40" />
+    {{ profile.user.username }} {% if profile.user.get_full_name %}({{ profile.user.get_full_name }}){% endif %}
+  </h2>
+{% endblock %}
 
 {% block userena_content %}
-  <div class="white-box">
     {% block profile_navigation %}
       {% comment %}Dirty hack. Will use django-guardian in the future.{% endcomment %}
       {% if user.username == profile.user.username %}
-        <ul id="box-nav">
           {% block profile_navigation_items %}
-            <li><a href="{% url 'userena_profile_detail' user.username %}">{% trans "View profile" %}</a></li>
-            <li><a href="{% url 'userena_profile_edit' user.username %}">{% trans "Edit details" %}</a></li>
-            <li><a href="{% url 'userena_password_change' user.username %}">{% trans "Change password" %}</a></li>
-            <li><a href="{% url 'userena_email_change' user.username %}">{% trans "Change email" %}</a></li>
+          <div class="btn-group">
+            <a type="button" class="btn btn-primary active" href="{% url 'userena_profile_detail' user.username %}">{% trans "View profile" %}</a>
+            <a type="button" class="btn btn-primary" href="{% url 'userena_profile_edit' user.username %}">{% trans "Edit profile" %}</a>
+            <a type="button" class="btn btn-primary" href="{% url 'userena_password_change' user.username %}">{% trans "Change password" %}</a>
+            <a type="button" class="btn btn-primary" href="{% url 'userena_email_change' user.username %}">{% trans "Change email" %}</a>
+          </div>
           {% endblock %}
-        </ul>
       {% endif %}
     {% endblock %}
+  <br/>
+  <div id="details">
+    {% block profile_details %}
+        {% block profile_definition_list %}
+          
+          {% if profile.user.get_full_name %}
+            <div class="panel panel-default">
+              <div class="panel-heading">{% trans "Name" %}</div>
+              <div class="panel-body">{{ profile.user.get_full_name }}</div>
+            </div>
+          {% endif %}
 
-    <div id="details">
-      {% block profile_details %}
-        <img class="mugshot" src="{{ profile.get_mugshot_url }}" alt="{% trans "Your mugshot" %}" />
-        <dl>
-          {% block profile_definition_list %}
-            {% if profile.user.get_full_name %}
-              <dt>{% trans "Name" %}</dt>
-              <dd>{{ profile.user.get_full_name }}</dd>
-            {% endif %}
-            {% if profile.user.email and not hide_email %}
-              <dt>{% trans "Email" %}</dt>
-              <dd>{{ profile.user.email }}</dd>
-            {% endif %}
-            {% if profile.age %}
-              <dt>{% trans "Age" %}</dt>
-              <dd>{{ profile.age }}</dd>
-            {% endif %}
-            {% if profile.website %}
-              <dt>{% trans "Website" %}</dt>
-              <dd>{{ profile.website|urlize }}</dd>
-            {% endif %}
-            {% if profile.location %}
-              <dt>{% trans "Location" %}</dt>
-              <dd>{{ profile.location }}</dd>
-            {% endif %}
-            {% if profile.about_me %}
-              <dt>{% trans "About me" %}</dt>
-              <dd>{{ profile.about_me }}</dd>
-            {% endif %}
-          {% endblock %}
-        </dl>
-      {% endblock %}
-    </div>
+          {% if profile.user.email and not hide_email %}
+            <div class="panel panel-default">
+              <div class="panel-heading">{% trans "Email" %}</div>
+              <div class="panel-body">{{ profile.user.email }}</div>
+            </div>
+          {% endif %}
+
+          {% if profile.age %}
+            <div class="panel panel-default">
+              <div class="panel-heading">{% trans "Age" %}</div>
+              <div class="panel-body">R{{ profile.age }}</div>
+            </div>
+          {% endif %}
+
+          {% if profile.website %}
+            <div class="panel panel-default">
+              <div class="panel-heading">{% trans "Website" %}</div>
+              <div class="panel-body">{{ profile.website|urlize }}</div>
+            </div>
+          {% endif %}
+
+          {% if profile.location %}
+            <div class="panel panel-default">
+              <div class="panel-heading">{% trans "Location" %}</div>
+              <div class="panel-body">{{ profile.location }}</div>
+            </div>
+          {% endif %}
+
+          {% if profile.about_me %}
+            <div class="panel panel-default">
+              <div class="panel-heading">{% trans "About me" %}</div>
+              <div class="panel-body">{{ profile.about_me }}</div>
+            </div>
+          {% endif %}
+        {% endblock %}
+
+    {% endblock %}
   </div>
 {% endblock %}
