--- a/rcstatsV2/templates/userena/profile_form.html
+++ b/rcstatsV2/templates/userena/profile_form.html
@@ -4,22 +4,26 @@
 
 {% block title %}{% trans "Account setup" %}{% endblock %}
 
-{% block userena_content_title %}<h2>{% blocktrans with profile.user.username as username %}Account &raquo; {{ username }}{% endblocktrans %}</h2>{% endblock %}
+{% block userena_content_title %}
+<h2>
+  <img class="img-rounded" src="{{ user.my_profile.get_mugshot_url }}" width="40" />
+  {% blocktrans with profile.user.username as username %}Account &raquo; {{ username }}{% endblocktrans %}
+</h2>
+{% endblock %}
 
 {% block userena_content %}
-
-<form action="" enctype="multipart/form-data" method="post">
-  <ul id="box-nav">
-    <li class="first"><a href="{% url 'userena_profile_detail' user.username %}"><span>{% trans 'View profile' %}</span></a></li>
-    <li class="selected"><a href="{% url 'userena_profile_edit' user.username %}">{% trans "Edit profile" %}</a></li>
-    <li><a href="{% url 'userena_password_change' user.username %}">{% trans "Change password" %}</a></li>
-    <li class="last"><a href="{% url 'userena_email_change' user.username %}">{% trans "Change email" %}</a></li>
-  </ul>
-  {% csrf_token %}
-  <fieldset>
-    <legend>{% trans "Edit Profile" %}</legend>
-    {{ form.as_p }}
-  </fieldset>
-  <input type="submit" value="{% trans "Save changes" %}" />
-</form>
+  <form action="" enctype="multipart/form-data" method="post">
+    <div class="btn-group">
+      <a type="button" class="btn btn-primary" href="{% url 'userena_profile_detail' user.username %}">{% trans "View profile" %}</a>
+      <a type="button" class="btn btn-primary active" href="{% url 'userena_profile_edit' user.username %}">{% trans "Edit profile" %}</a>
+      <a type="button" class="btn btn-primary" href="{% url 'userena_password_change' user.username %}">{% trans "Change password" %}</a>
+      <a type="button" class="btn btn-primary" href="{% url 'userena_email_change' user.username %}">{% trans "Change email" %}</a>
+    </div>
+    {% csrf_token %}
+    <fieldset>
+      <legend>{% trans "Edit Profile" %}</legend>
+      {{ form.as_p }}
+    </fieldset>
+    <input type="submit" value="{% trans "Save changes" %}" />
+  </form>
 {% endblock %}
