Initial commit of the page to handle race subscription signup, tests, and the new datamodel

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -12,7 +12,7 @@ RC-Stats is a racing community to track and share your RC race results.
 
 <div class="jumbotron">
   <div class="container">
-    <img class="img-responsive" src="static/img/logo.png"/>
+    <img class="img-responsive" src="/static/img/logo.png"/>
     <p>RC Racing Community.</p>
   </div>
 </div>
