Adding links to the race subscription page

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -27,10 +27,11 @@ RC-Stats is a racing community to track and share your RC race results.
         New functionality:
       </p>
       <ul>
-      <li>Profile creation and login.</li>
-      <li>Email race results directly to your inbox.</li>
       <li>Automatic race uploads, no more gaps in race coverage.</li>
+      <li>Mobile friendly, race results on any device.</li>
+      <li>Email race results directly to your inbox.</li>
       </ul>
+      <a type="button" href="{% url 'userena_signup' %}" class="btn btn-success">Free signup - choose the classes you want to follow.</a>
     </div>
   </div>
   <div class="row">
