--- a/rcstatsV2/templates/userena/email_form.html
+++ b/rcstatsV2/templates/userena/email_form.html
@@ -18,6 +18,7 @@
     <a type="button" class="btn btn-primary" href="{% url 'userena_profile_edit' user.username %}">{% trans "Edit profile" %}</a>
     <a type="button" class="btn btn-primary" href="{% url 'userena_password_change' user.username %}">{% trans "Change password" %}</a>
     <a type="button" class="btn btn-primary active" href="{% url 'userena_email_change' user.username %}">{% trans "Change email" %}</a>
+    <a type="button" class="btn btn-primary" href="{% url 'race-emails' %}">{% trans "Email Notification" %}</a>
   </div>
   {% csrf_token %}
   <fieldset>
