--- a/rcstatsV2/templates/userena/profile_detail.html
+++ b/rcstatsV2/templates/userena/profile_detail.html
@@ -21,6 +21,7 @@
             <a type="button" class="btn btn-primary" href="{% url 'userena_profile_edit' user.username %}">{% trans "Edit profile" %}</a>
             <a type="button" class="btn btn-primary" href="{% url 'userena_password_change' user.username %}">{% trans "Change password" %}</a>
             <a type="button" class="btn btn-primary" href="{% url 'userena_email_change' user.username %}">{% trans "Change email" %}</a>
+            <a type="button" class="btn btn-primary" href="{% url 'race-emails' %}">{% trans "Email Notification" %}</a>
           </div>
           {% endblock %}
       {% endif %}
