--- a/rcstatsV2/templates/userena/signin_form.html
+++ b/rcstatsV2/templates/userena/signin_form.html
@@ -25,7 +25,7 @@
     {% endif %}
     {% endfor %}
   </fieldset>
-  <input type="submit" value="{% trans "Signin" %}" />
+  <input type="submit" class="btn btn-primary" value="{% trans "Signin" %}" />
   <p class="forgot-password"><a href="{% url 'userena_password_reset' %}" title="{% trans 'Forgot your password?' %}">{% trans "Forgot your password?" %}</a></p>
   {% if next %}<input type="hidden" name="next" value="{{ next }}" />{% endif %}
 </form>
