Tweaking landing page copy and update comments in configs

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -21,6 +21,7 @@ RC-Stats is a racing community to track and share your RC race results.
   <div class="row">
     <div class="col-md-12 well">
       <h2>NEW RC-Stats</h2>
+      <a type="button" href="{% url 'userena_signup' %}" class="btn btn-success">Signup for rc-stats</a>
       <p>
         <b>Mobile friendly and email updates</b>. This is a complete re-write of the original rc-stats site.
         <br/>
@@ -31,7 +32,7 @@ RC-Stats is a racing community to track and share your RC race results.
       <li>Mobile friendly, race results on any device.</li>
       <li>Email race results directly to your inbox.</li>
       </ul>
-      <a type="button" href="{% url 'userena_signup' %}" class="btn btn-success">Free signup - choose the classes you want to follow.</a>
+      <a type="button" href="{% url 'race-emails' %}" class="btn btn-info">Choose just the classes you want to follow.</a>
     </div>
   </div>
   <div class="row">
