--- a/rcstatsV2/templates/rcstats_base.html
+++ b/rcstatsV2/templates/rcstats_base.html
@@ -97,13 +97,14 @@
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="/static/js/jquery-1.11.2.min.js"></script>
+    <script src="/static/js/jquery-1.12.3.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/bootstrap-table.min.js"></script>
+    <script src="/static/js/bootstrap-table-mobile.min.js"></script>-
     <script src="/static/js/underscore-min.js"></script>
     <script src="/static/js/moment.min.js"></script>
-    <!-- Google Analytics -->
+    <!-- Google Analytics 
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -113,7 +114,7 @@
     ga('create', 'UA-32701094-1', 'auto');
     ga('send', 'pageview');
     </script>
-    <!-- End Google Analytics -->
+     End Google Analytics -->
     {% block script %} {% endblock %}
 
 </body>
